--- a/style/style.scss
+++ b/style/style.scss
@@ -46,7 +46,7 @@
         color: var(--color-black);
         box-sizing: border-box;
         position: relative;
-        text-align: justify;
+        // text-align: justify;
         overflow-wrap: break-word;
         line-break: normal;
         line-height: 1.4;
